fix: wrap long words on button labels

--- a/assets/stylesheet/forms/btn.scss
+++ b/assets/stylesheet/forms/btn.scss
@@ -7,6 +7,7 @@
   padding: 1.26rem 2.3rem;
   border-radius: 0.6rem;
   cursor: pointer;
+  word-break: break-word;
 
   &:hover {
     background-color: $color-hover-bg;
